# ado-express

./: .env  .gitignore  Deployment-Details-Template.xlsx  Dockerfile  LICENSE  README.md  constants.py  index.html  main.py  models.py  package-lock.json  package.json  project-flow.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  update_releases.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/scripts/: release.py
.github/workflows/: executables.yaml  publish.yaml  (+2 more)
ado_express/: README.md  main.py
ado_express_api/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
ado_express_app/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
assets/: index-01c1e984.css  index-0564abe8.css  index-0a8f90fb.js  index-11fd544f.js  index-164c9db5.css  index-17b81b1e.css  index-1c24789b.js  index-229569cf.css  index-24943a93.js  index-26356941.css  index-36b612e5.css  index-3ab0c572.js  index-3b97ac34.css  index-421a017c.js  index-4c7c11a7.js  index-551bfca8.css  index-5eac8351.css  index-64207812.js  index-663ae1cc.js  index-6682e00b.js  index-66d3eee5.js  index-68f8e40f.css  index-7334deb5.js  index-78752ba5.css  index-79c8f255.js  index-86d9a26b.js  index-8c922aa6.js  index-9f112989.css  index-b060a861.css  index-b08a73db.css  index-bc8ca45d.js  index-c52d4c92.js  index-c859f315.js  index-d0742405.css  index-e644a9d3.js  index-e7c4000d.css  index-e80f73d2.js  index-f5ce07e6.js  index-f845bd72.js  index-ff563a5d.js
files/: deployment-plan.xlsx
(+136 files in other folders)
