[metadata]
name = ado-express
description = Application for automating release note creation & deployment in ADO
url = https://github.com/FarzamMohammadi/ado-express
project_urls =
    Bug Tracker = https://github.com/FarzamMohammadi/ado-express/issues
    Changelog = https://github.com/FarzamMohammadi/ado-express/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = ado_express
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ado_express

[options.entry_points]
console_scripts =
    ado_express = ado_express.main